--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,32 @@ body {
     background-color: rgb(46, 46, 46);
     color: white;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     justify-content: center;
     margin: 0;
+    height: 100vh;
     overflow-x: hidden;
+}
+
+.btn {
+    background-color: rgb(30, 30, 30);
+    border-radius: 5px;
+    border: none;
+    color: white;
+    margin: 1rem;
+    padding: 1.5rem 3rem;
+    font-size: 1.2rem;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: rgb(75, 75, 75);
+}
+
+.btn:focus {
+    outline: none;
 }
